syntax = "proto3";

package identity.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// 角色服务
service RoleService {
  // 查询角色列表
  rpc List (pagination.PagingRequest) returns (ListRoleResponse) {}

  // 统计角色数量
  rpc Count (pagination.PagingRequest) returns (CountRoleResponse) {}

  // 查询角色详情
  rpc Get (GetRoleRequest) returns (Role) {}

  // 创建角色
  rpc Create (CreateRoleRequest) returns (google.protobuf.Empty) {}
  // 批量创建角色
  rpc BatchCreate (BatchCreateRolesRequest) returns (BatchCreateRolesResponse) {}

  // 更新角色
  rpc Update (UpdateRoleRequest) returns (google.protobuf.Empty) {}

  // 删除角色
  rpc Delete (DeleteRoleRequest) returns (google.protobuf.Empty) {}


  // 根据角色ID列表获取角色值列表
  rpc GetRoleCodesByRoleIds(GetRoleCodesByRoleIdsRequest) returns (GetRoleCodesByRoleIdsResponse) {}

  // 根据角色值列表获取角色列表
  rpc GetRolesByRoleCodes(GetRolesByRoleCodesRequest) returns (ListRoleResponse) {}

  // 根据角色值列表获取角色列表
  rpc GetRolesByRoleIds(GetRolesByRoleIdsRequest) returns (ListRoleResponse) {}
}

// 角色
message Role {
  // 角色状态
  enum Status {
    OFF = 0;         // 禁用
    ON = 1;          // 启用
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "角色ID"}
  ];  // 角色ID

  optional string name = 2 [
    json_name = "name",
    (gnostic.openapi.v3.property) = {description: "角色名称"}
  ];  // 角色名称

  optional string code = 3 [
    json_name = "code",
    (gnostic.openapi.v3.property) = {
      description: "角色标识码"
      example: {yaml: "platform:admin, tenant:admin1"}
    }
  ];  // 角色标识码（如：ADMIN, VIEWER）

  optional uint32 sort_order = 4 [
    json_name = "sortOrder",
    (gnostic.openapi.v3.property) = {description: "排序顺序，值越小越靠前"}
  ];  // 排序顺序，值越小越靠前

  optional Status status = 5 [
    json_name = "status",
    (gnostic.openapi.v3.property) = {description: "状态"}
  ];  // 状态

  optional string description = 6 [
    json_name = "description",
    (gnostic.openapi.v3.property) = {description: "描述"}
  ];  // 描述

  optional bool is_protected = 7 [
    json_name = "isProtected",
    (gnostic.openapi.v3.property) = {description: "受保护角色，仅平台管理员可修改"}
  ];  // 受保护角色，仅平台管理员可修改

  optional bool is_system = 8 [
    json_name = "isSystem",
    (gnostic.openapi.v3.property) = {description: "系统内置角色，仅平台管理员可修改"}
  ];  // 系统内置角色

  repeated uint32 permissions = 10 [
    json_name = "permissions",
    (gnostic.openapi.v3.property) = {description: "绑定的权限点ID列表"}
  ]; // 绑定的权限点ID列表

  optional uint32 tenant_id = 40 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID，0代表系统全局角色"}
  ];  // 租户ID，0代表系统全局角色
  optional string tenant_name = 41 [
    json_name = "tenantName",
    (gnostic.openapi.v3.property) = {description: "租户名称"}
  ];  // 租户名称

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者ID"}]; // 创建者ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者ID"}]; // 更新者ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}


// 角色权限覆盖
message RoleOverride {
  // 权限点覆盖
  message PermissionDelta {
    repeated string added_permissions = 1;   // 租户额外增加的权限
    repeated string removed_permissions = 2; // 租户明确禁用的权限（即便模板有，也禁用）
  }

  PermissionDelta permissions = 1;

  // 基础字段修改（如果为空则沿用模板）
  optional string display_name = 2;
  optional string description = 3;

  // 扩展配置
  map<string, string> extended_settings = 4; // 存储如 "ui_color": "#FF0000"

  // 策略覆盖
  message SecurityPolicy {
    bool force_mfa = 1;
    repeated string ip_allow_list = 2;
  }
  SecurityPolicy security_policy = 5;
}

// 角色元数据
message RoleMetadata {
  // 同步策略
  enum SyncPolicy {
    AUTO = 0;        // 自动同步
    MANUAL = 1;      // 手动同步
    BLOCKED = 2;     // 阻止同步
  }

  // 作用域
  enum Scope {
    PLATFORM = 0;     // 平台级
    TENANT = 1;       // 租户级
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "角色元数据ID"}
  ];  // 角色元数据ID

  optional uint32 role_id = 2 [
    json_name = "roleId",
    (gnostic.openapi.v3.property) = {description: "角色ID"}
  ];  // 角色ID

  optional bool is_template = 3 [
    json_name = "isTemplate",
    (gnostic.openapi.v3.property) = {description: "是否是模版"}
  ];  // 是否是模版

  optional string template_for = 4 [
    json_name = "templateFor",
    (gnostic.openapi.v3.property) = {description: "模板适用对象"}
  ];  // 模板适用对象

  optional int32 template_version = 5 [
    json_name = "templateVersion",
    (gnostic.openapi.v3.property) = {description: "模板版本号"}
  ];  // 模板版本号

  optional int32 last_synced_version = 6 [
    json_name = "lastSyncedVersion",
    (gnostic.openapi.v3.property) = {description: "上次同步的版本号"}
  ];  // 上次同步的版本号

  optional google.protobuf.Timestamp last_synced_at = 7 [
    json_name = "lastSyncedAt",
    (gnostic.openapi.v3.property) = {description: "最后同步时间"}
  ];  // 最后同步时间

  optional SyncPolicy sync_policy = 8 [
    json_name = "syncPolicy",
    (gnostic.openapi.v3.property) = {description: "同步策略"}
  ];  // 同步策略

  optional Scope scope = 9 [
    json_name = "scope",
    (gnostic.openapi.v3.property) = {description: "作用域"}
  ];  // 作用域

  RoleOverride custom_overrides = 10 [
    json_name = "customOverrides",
    (gnostic.openapi.v3.property) = {description: "租户自定义覆盖项"}
  ];  // 租户自定义覆盖项

  optional uint32 tenant_id = 20 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID，0代表系统全局角色"}
  ];  // 租户ID，0代表系统全局角色

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者ID"}]; // 创建者ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者ID"}]; // 更新者ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}


// 角色列表 - 答复
message ListRoleResponse {
  repeated Role items = 1;
  uint64 total = 2;
}

// 角色数据 - 请求
message GetRoleRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID

    string name = 2 [
      (gnostic.openapi.v3.property) = {description: "名称", read_only: true},
      json_name = "name"
    ]; // 名称

    string code = 3 [
      (gnostic.openapi.v3.property) = {description: "唯一编码", read_only: true},
      json_name = "code"
    ]; // 唯一编码
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

// 创建角色 - 请求
message CreateRoleRequest {
  Role data = 1;
}

// 更新角色 - 请求
message UpdateRoleRequest {
  uint32 id = 1;

  Role data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "要更新的字段列表",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // 要更新的字段列表

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。"},
    json_name = "allowMissing"
  ]; // 如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。
}

// 删除角色 - 请求
message DeleteRoleRequest {
  uint32 id = 1;
}

message BatchCreateRolesRequest {
  repeated Role items = 1;
}
message BatchCreateRolesResponse {
  repeated int32 created_ids = 1 [
    json_name = "createdIds",
    (gnostic.openapi.v3.property) = {
      description: "创建成功的角色ID列表"
    }
  ]; // 创建成功的角色ID列表
}

message GetRoleCodesByRoleIdsRequest {
  repeated uint32 role_ids = 1 [json_name = "roleIds", (gnostic.openapi.v3.property) = {description: "角色ID列表"}];
}
message GetRoleCodesByRoleIdsResponse {
  repeated string role_codes = 1 [json_name = "roleCodes", (gnostic.openapi.v3.property) = {description: "角色值列表"}];
}

message GetRolesByRoleCodesRequest {
  repeated string role_codes = 1 [json_name = "roleCodes", (gnostic.openapi.v3.property) = {description: "角色值列表"}];

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

message GetRolesByRoleIdsRequest {
  repeated uint32 role_ids = 1 [json_name = "roleIds", (gnostic.openapi.v3.property) = {description: "角色ID列表"}];

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

message CountRoleResponse {
  uint64 count = 1;
}
